Fixing z-index for meta info (byline) on unpublished nodes.

--- a/styles/cog.css
+++ b/styles/cog.css
@@ -156,7 +156,8 @@ img.video {
   position: relative;
 }
 
-.node-unpublished .node-inner div {
+.node-unpublished .node-inner div,
+.node-unpublished .node-inner .meta {
   z-index: 10;
   position: relative;
 }
